# Roxen-Application-Launcher

./: .gitignore  .gitignore~  AUTHORS  MAINTAINERS  Makefile.am  README  README.md  README.textile  autogen.sh  conf-with-vala  config.h  configure.ac  kde-autogen.sh  roxenlauncher.gi  roxenlauncher.vide
data/: Makefile.am  com.roxen.Launcher.gschema.xml  content-type.ui  mainwindow.ui  roxen-launcher.desktop.in  xrl2-mime.xml
po/: Makefile.in  POTFILES  POTFILES.in  sv.mo  sv.po
src/: Makefile.am  application-form.c  application-form.vala  application.c  application.vala  config.h  config.vapi  content-type-form.vala  content-type.vala  editor.vala  http-client.c  http-client.vala  keyfile.vala  launcherfile.c  launcherfile.vala  main.c  main.vala  mainwindow.c  mainwindow.vala  poppa.vala  roxelauncher.vala  roxenlauncher  roxenlauncher.vide  soppa.c  soppa.h  soppa.vapi  tools.c  tools.vala  tray.c  tray.vala
src/.deps/: main.Po  mainwindow.Po  tools.Po
src/data/: Makefile.am  com.roxen.Launcher.gschema.xml  mainwindow.ui
src/gui/: application-form.c  application-form.ui  application-form.vala  mainwindow.c  mainwindow.ui  mainwindow.ui~  mainwindow.vala
src/vapi/: config.vapi
