NULL =

ACLOCAL_AMFLAGS = -I m4 --install

#Build in these directories:

SUBDIRS =                                                          \
	data                                                             \
	src                                                              \
	po                                                               \
	$(NULL)

roxenlauncherdocdir = ${prefix}/doc/roxenlauncher
roxenlauncherdoc_DATA =                                            \
	$(NULL)
#	ChangeLog                                                        \
#	README                                                           \
#	COPYING                                                          \
#	AUTHORS                                                          \
#	INSTALL                                                          \
#	$(NULL)

EXTRA_DIST =                                                       \
	$(roxenlauncherdoc_DATA)                                         \
	intltool-extract.in                                              \
	intltool-merge.in                                                \
	intltool-update.in                                               \
	$(NULL)

DISTCLEANFILES =                                                   \
	intltool-extract                                                 \
	intltool-merge                                                   \
	intltool-update                                                  \
	po/.intltool-merge-cache                                         \
	$(NULL)

DISTCHECK_CONFIGURE_FLAGS = --disable-schemas-install

CHANGELOG_START=9e9f50d35d03b1ca3b46d43fa38711b934986251

dist-hook:
	@if test -d "$(srcdir)/.git";                                    \
	then                                                             \
		echo Creating ChangeLog &&                                     \
		( cd "$(top_srcdir)" &&                                        \
		  echo '# Generated by Makefile. Do not edit.'; echo;          \
		  $(top_srcdir)/missing --run git log $(CHANGELOG_START)..     \
			--stat -M -C --name-status --no-color ) |                    \
			fmt --split-only > ChangeLog.tmp                             \
		&& mv -f ChangeLog.tmp $(top_distdir)/ChangeLog                \
		|| ( rm -f ChangeLog.tmp ;                                     \
		  echo Failed to generate ChangeLog >&2 );                     \
	else                                                             \
		echo A git clone is required to generate a ChangeLog >&2;      \
	fi

